data/derived/fa15/progs/unify/prog2279.ml.out
Characters 36-37:
  let _ = stringOfList string_of_int [1;2;3;4;5;6];;
                                      ^
Error: This expression has type int but an expression was expected of type
         string list
